Corrected the misaligned buttons

--- a/style.css
+++ b/style.css
@@ -22,8 +22,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   color: white;
   text-shadow: 2px 2px 4px black;
+  position: relative;
 }
 
 #top-text {
@@ -62,18 +64,18 @@ body {
 }
 
 #warning-content {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   width: 75%;
   background: black;
   color: white;
   text-align: center;
-  margin: auto;
-  left: 0;
-  right: 0;
   padding: 10px;
   border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 #warning-content b {
@@ -86,11 +88,23 @@ body {
 }
 
 #button-container {
-  width: 100%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+  margin-top: auto;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#button-container-index2 {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 20px;
 }
 
 .button {
@@ -157,27 +171,29 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-
-#top-section {
-  height: 50%;
-  width: 100%;
+  background-image: url('Images/AllHeroes.png');
   background-size: 375px 667px;
   background-repeat: no-repeat;
   background-position: center center;
 }
 
+#top-section {
+  height: 100%;
+  width: 100%;
+}
+
 #bottom-section {
-  height: 50%;
+  height: 100%;
   background: black;
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   position: relative;
   padding: 10px;
   box-sizing: border-box;
+  min-height: 0;
 }
 
 #bottom-section > p {
@@ -232,7 +248,7 @@ body {
   padding: 15px;
   box-sizing: border-box;
   text-align: center;
-  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #instruction-box p {
@@ -243,11 +259,13 @@ body {
 
 #instruction-box ul {
   color: black;
+  text-align: left;
   font-size: 1em;
   margin: 10px 0;
-  padding: 0;
-  list-style-type: none;
-  width: 100%;
+  padding-left: 100px;
+  text-wrap: wrap;
+  width: calc(100% - 50px);
+  margin-right: 50px;
 }
 
 #instruction-box li {
@@ -255,18 +273,9 @@ body {
   font-size: 1em;
   margin: 5px 0;
   padding: 5px;
-  text-align: center;
+  text-align: left;
   line-height: 1.2;
 }
-
-#button-container {
-  width: 80%;
-  margin: 10px auto 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .circle-button {
   width: 80px;
   height: 80px;
@@ -284,6 +293,14 @@ body {
 
 #dont-allow {
   background-color: red;
+}
+
+#button-container {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
 @media (max-width: 768px) {
